--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_button.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_button.scss
@@ -1,5 +1,5 @@
 .button {
-  @apply focus-visible:focus-ring text-md inline-flex h-11 cursor-pointer touch-manipulation items-center justify-center whitespace-nowrap rounded-sm px-6 font-medium leading-tight transition-all duration-200;
+  @apply focus-visible:focus-ring inline-flex h-11 cursor-pointer touch-manipulation items-center justify-center whitespace-nowrap rounded-sm px-6 text-md font-medium leading-tight transition-all duration-200;
 
   @screen md {
     @apply h-12;
@@ -7,50 +7,54 @@
 
   &--size {
     &-sm {
-      @apply min-w-9 h-9 px-5 text-sm;
+      @apply h-9 min-w-9 px-5 text-sm;
     }
 
     &-md {
-      @apply py-3 px-6 rounded-sm;
+      @apply rounded-sm px-6 py-3;
     }
   }
 
   &--filled {
     &-primary {
-      @apply bg-primary-500 hover:bg-primary-600 text-white;
+      @apply bg-primary-500 text-white hover:bg-primary-600;
     }
 
     &-white {
-      @apply text-text-on-fg bg-white hover:bg-gray-100;
+      @apply bg-white text-text-on-fg hover:bg-gray-100 contrast-more:border contrast-more:border-secondary-700;
     }
   }
 
   &--outline {
     &-primary {
-      @apply border-1 border-primary-600 text-primary-500 hover:bg-primary-50 border-solid bg-transparent;
+      @apply border-1 border-solid border-primary-600 bg-transparent text-primary-500 hover:bg-primary-50;
     }
 
     &-secondary {
-      @apply border-1 border-secondary-100 text-secondary-600 hover:bg-secondary-50 active:bg-secondary-100 border-solid bg-transparent;
+      @apply border-1 border-solid border-secondary-100 bg-transparent text-secondary-600 hover:bg-secondary-50 active:bg-secondary-100 contrast-more:border-secondary-700 contrast-more:text-secondary-700;
 
       &.selected {
-        @apply hover:bg-primary-50 active:bg-primary-100 text-primary-600 border-current;
+        @apply border-current text-primary-600 hover:bg-primary-50 active:bg-primary-100;
       }
     }
   }
 
   &--ghost {
     &-primary {
-      @apply text-primary-500 hover:bg-primary-50 bg-transparent;
+      @apply bg-transparent text-primary-500 hover:bg-primary-50;
     }
 
     &-secondary {
-      @apply text-secondary-600 hover:bg-secondary-50 bg-transparent;
+      @apply bg-transparent text-secondary-600 hover:bg-secondary-50;
     }
   }
 
+  &--disabled {
+    @apply cursor-not-allowed opacity-50;
+  }
+
   &__icon {
-    @apply inline-flex shrink-0 items-center justify-center;
+    @apply relative inline-flex shrink-0 items-center justify-center;
 
     svg {
       @apply icon;
@@ -63,9 +67,5 @@
     &--right {
       @apply ml-3;
     }
-  }
-
-  &.disabled {
-    @apply cursor-not-allowed opacity-50;
   }
 }
