--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_popup.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_popup.scss
@@ -18,10 +18,10 @@
 
 .popup {
   &__overlay {
-    @apply bg-overlay pointer-events-none fixed left-0 right-0 top-0 -bottom-80 z-40 max-w-full opacity-0 transition-opacity duration-300 md:z-10 md:delay-500;
+    @apply pointer-events-none fixed -bottom-80 left-0 right-0 top-0 z-40 max-w-full bg-overlay opacity-0 transition-opacity duration-300 md:z-10 md:delay-500;
 
     &--focused {
-      @apply md:delay-0 pointer-events-auto opacity-100;
+      @apply pointer-events-auto opacity-100 md:delay-0;
     }
 
     &--full-screen {
@@ -33,13 +33,13 @@
 @screen max-md {
   .popup {
     &__main {
-      @apply max-w-screen pointer-events-none fixed inset-x-0 bottom-0 z-50 p-3;
+      @apply pointer-events-none fixed inset-x-0 bottom-0 z-50 max-w-screen p-3;
 
       height: calc(100dvh - var(--popup-end-of-header-height));
     }
 
     &__shadow {
-      @apply from-shadow pointer-events-none absolute left-0 right-0 -bottom-3 w-full origin-bottom-right bg-gradient-to-t to-transparent transition-transform duration-500;
+      @apply pointer-events-none absolute -bottom-3 left-0 right-0 w-full origin-bottom-right bg-gradient-to-t from-shadow to-transparent transition-transform duration-500 motion-reduce:transition-none;
 
       height: 100px;
       transform: translateY(100%);
@@ -50,7 +50,7 @@
     }
 
     &__wrapper {
-      @apply absolute inset-x-3 inset-y-3 translate-y-full scale-x-75 transition-transform duration-500;
+      @apply absolute inset-x-3 inset-y-3 translate-y-full scale-x-75 transition-transform duration-500 motion-reduce:transition-none;
 
       &--visible {
         @apply translate-y-0 scale-x-100;
@@ -64,7 +64,7 @@
     }
 
     &__content-top {
-      @apply bg-fg pointer-events-none relative top-full z-10 h-full rounded-t-md transition-transform duration-500;
+      @apply pointer-events-none relative top-full z-10 h-full rounded-t-md bg-fg transition-transform duration-500 motion-reduce:transition-none contrast-more:border-l-1 contrast-more:border-r-1 contrast-more:border-t-1 contrast-more:border-secondary-700;
 
       transform: translateY(calc(var(--popup-max-height) * -1 - 8px));
 
@@ -74,7 +74,7 @@
     }
 
     &__content {
-      @apply pointer-events-none absolute inset-x-0 z-20 h-full w-full opacity-0 transition-all duration-500;
+      @apply pointer-events-none absolute inset-x-0 z-20 h-full w-full overflow-hidden rounded-md pt-3 opacity-0 transition-all duration-500 motion-reduce:transition-none contrast-more:border-1 contrast-more:border-t-0 contrast-more:border-secondary-700;
 
       max-width: calc(100vw - 8px);
       top: calc(100% - 8px);
@@ -85,7 +85,7 @@
       }
 
       &--full-screen {
-        transform: translateY(calc(-100% + 16px));
+        transform: translateY(calc(-100% + 9px));
       }
     }
 
@@ -98,7 +98,7 @@
     }
 
     &__fixed-content-portal {
-      @apply pointer-events-auto absolute left-0 bottom-0 z-30 w-full opacity-0 transition-opacity duration-500;
+      @apply pointer-events-auto absolute bottom-0 left-0 z-30 w-full opacity-0 transition-opacity duration-500 contrast-more:border-l-1 contrast-more:border-r-1 contrast-more:border-secondary-700;
 
       &--visible {
         @apply opacity-100;
@@ -106,7 +106,7 @@
     }
 
     &__bottom {
-      @apply bg-fg absolute bottom-0 left-0 right-0 z-10 w-full rounded-b-md pb-4;
+      @apply absolute bottom-0 left-0 right-0 z-10 w-full rounded-b-md bg-fg pb-4 contrast-more:border-1 contrast-more:border-t-0 contrast-more:border-secondary-700;
     }
   }
 }
