--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item-details-article.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item-details-article.phtml
@@ -22,32 +22,77 @@ if (!$isAlpineTemplate) {
 ?>
 
 <article
-    aria-label="Product details"
-    class="w-full h-full z-10 flex justify-start items-stretch flex-col text-start"
-    x-data="{
-        minimumPrice: product.price_range.minimum_price,
-        maximumPrice: product.price_range.maximum_price
-    }"
+    class="z-10 flex h-full w-full flex-col items-stretch justify-start text-start"
+    x-data="ProductPage()"
+    <?php if (!$isAlpineTemplate): ?>
+    x-init="
+    () => {
+        $data.setProductPageProps({
+            <?php // TODO: Pass correct product data ?>
+            manuallySelectedVariantId: {{ card_product.selected_variant.id | default: 0 }},
+            selectedVariantId: {{ card_product.selected_or_first_available_variant.id }},
+            selectedOptions: JSON.parse('{{ card_product.selected_or_first_available_variant.options | json | escape }}'),
+            productId: {{ card_product.id }},
+            productUrl: '{{ card_product.url }}',
+            isSyncedWithUrl: false,
+            isScrollingToTop: false,
+            variantsCount: {{ card_product.variants | size }}
+        })
+    }
+    "
+    <?php endif; ?>
 >
-    <?php if($isAlpineTemplate || $featuredImage): ?>
-        <div class="bg-secondary-100 overflow-hidden rounded-md" x-element-transition-src="img">
-            <?php if($isAlpineTemplate): ?>
+    <?php if (!$isAlpineTemplate): // this image is needed to avoid blink in preview on desktop as there, the select variant is shown, not featured image ?>
+        <?php // TODO: Replace with correct image url ?>
+        <img width="0" height="0" class="pointer-events-none invisible absolute hidden h-0 w-0 md:block" src="{{ card_product.selected_or_first_available_variant.image | image_url }}" alt="">
+    <?php endif; ?>
+
+    <div class="relative overflow-hidden rounded-md bg-secondary-100" x-element-transition-src="img">
+        <?php if($isAlpineTemplate): ?>
+            <template x-if="product.featured_image?.url">
                 <img
-                    :src="product.small_image?.url ? product.small_image.url : ''"
-                    :alt="product.small_image?.label"
-                    class="aspect-product w-full h-full object-cover object-center"
+                    :src="product.featured_image.url"
+                    :alt="product.featured_image?.alt"
+                    class="aspect-product h-full w-full object-cover object-center transition-transform md:group-hover:scale-105"
                     loading="<?= $imageLoading ?>"
                     width=""
                     height=""
                 >
+            </template>
+        <?php else: ?>
+            <?php if ($product->getImage()): ?>
+                <?php // TODO: Create and move into an image snippet/template ?>
+                <div class="bg-secondary-100 overflow-hidden rounded-md" x-element-transition-src="img">
+                    <img
+                        <?php // TODO: Update with real dynamic data ?>
+                        :src="product.small_image?.url ? product.small_image.url : ''"
+                        :alt="product.small_image?.label"
+                        class="aspect-product w-full h-full object-cover object-center"
+                        loading="<?= $imageLoading ?>"
+                        width=""
+                        height=""
+                    >
+                </div>
             <?php else: ?>
-                <!-- TODO: Render product image for Product list -->
+                <div class="flex aspect-product w-full items-center justify-center bg-secondary-100">
+                    <?= __('Missing image') ?>
+                </div>
             <?php endif; ?>
+        <?php endif; ?>
+
+        <?php // TODO: Make dynamic discount badge ?>
+        <div class="card-product__badge-container bottom left">
+            <span
+              class="card-product__badge bg-white px-3 py-2 text-sm font-bold"
+            >
+              <?= __("-12% OFF") ?>
+            </span>
         </div>
-    <?php endif; ?>
-    <div class="flex flex-col gap-1 mt-4 relative">
-        <h3
-            class="text-md w-[calc(100%-40px)] truncate"
+    </div>
+
+    <div class="relative mt-4 flex flex-col gap-1">
+        <h2
+            class="w-[calc(100%-40px)] text-md truncate"
             <?php if($isAlpineTemplate): ?>
                 x-text="product.name"
             <?php endif; ?>
@@ -55,14 +100,22 @@ if (!$isAlpineTemplate) {
             <?php if(!$isAlpineTemplate): ?>
                 <?= $title ?>
             <?php endif; ?>
-        </h3>
-        <?php if($showAddToWishlist): ?>
-            <button
-                class="absolute right-0 top-0 button button--ghost-secondary icon-button icon-button--size-sm"
-            >
-                <?= $hyvaicons->renderHtml('wishlist'); ?>
-            </button>
-        <?php endif; ?>
+        </h2>
+
+        <?php // TODO: Make dynamic ?>
+        <p class="w-[calc(100%-40px)] truncate text-text-100 contrast-more:text-secondary-700">
+            Vendor
+        </p>
+
+        <?php // TODO: Make Quick buy button work ?>
+        <button
+            class="absolute right-0 top-1/2 -translate-y-1/2 text-xl md:hidden"
+            @click.prevent.stop="quickBuy()"
+            aria-label="<?= __('Add to cart') ?>"
+          >
+          <?= $hyvaicons->renderHtml('cart'); ?>
+        </button>
+
         <?= $block->getChildHtml('product.card.price') ?>
     </div>
 </article>
