--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header.phtml
@@ -18,8 +18,8 @@ $cartItemsCount = $cart->getCartItemsQty();
         return {
             searchOpen: false,
             cart: {},
-            isCartOpen: false,
             isMenuVisible: false,
+            isCartVisible: false,
             getData(data) {
                 const { cart } = data;
 
@@ -38,67 +38,71 @@ $cartItemsCount = $cart->getCartItemsQty();
     }
 </script>
 
-<!-- TODO: Intersect is not working. -->
-<div x-intersect:enter="$store.main.isHeaderShadowVisible = false" x-intersect:leave="$store.main.isHeaderShadowVisible = true"></div>
+<div
+  x-intersect:enter="$store.main.isHeaderShadowVisible = false"
+  x-intersect:leave="$store.main.isHeaderShadowVisible = true"
+></div>
+
 <header
     x-data="initHeader()"
     x-init="
-        $store.main.totalCartQty  = <?= $cartItemsCount ?? 0 ?>;
         $watch('$store.popup.currentPopup', (value) => {
-            if (value === 'menu') {
-                isMenuVisible = true
-            } else {
-                isMenuVisible = false
-            }
+            isMenuVisible = value === 'menu';
+            isCartVisible = value === 'cart';
         })
     "
+    class="header sticky left-0 right-0 top-0 z-[36] flex flex-col justify-items-stretch p-3 md:pointer-events-none"
     @private-content-loaded.window="getData(event.detail.data)"
-    class="header flex flex-col justify-items-stretch left-0 top-0 right-0 z-[36] p-3 sticky md:pointer-events-none"
 >
     <div
         id="header-shadow"
-        class="absolute left-0 right-0 -top-1 pointer-events-none -z-10 h-[calc(100%+20px)] bg-gradient-to-b from-shadow to-transparent will-change-transform transition-transform -translate-y-full duration-300 ease-linear md:hidden" :class="
-      {
-        'translate-y-0': $store.main.isHeaderShadowVisible,
-        '-translate-y-full': !$store.main.isHeaderShadowVisible,
-      }
-    "></div>
+        class="pointer-events-none absolute -top-1 left-0 right-0 -z-10 h-[calc(100%+20px)] -translate-y-full bg-gradient-to-b from-shadow to-transparent transition-transform duration-300 ease-linear will-change-transform md:hidden"
+        :class="
+            {
+                'translate-y-0': $store.main.isHeaderShadowVisible,
+                '-translate-y-full': !$store.main.isHeaderShadowVisible,
+            }
+        "
+    ></div>
+
     <div
-        class="grid col-start-1 w-full grid-cols-header md:flex items-center bg-fg md:bg-transparent p-3 rounded-md container m-auto"
+        class="content-wrapper col-start-1 m-auto grid w-full grid-cols-header items-center rounded-md bg-fg py-3 md:flex md:bg-transparent md:px-3 contrast-more:max-md:border contrast-more:max-md:border-secondary-700"
         x-data="{n:0}"
     >
         <div class="md:flex" :class="{'md:drop-shadow-lg': $store.main.isHeaderShadowVisible}">
             <?= $block->getChildHtml('resizable.menu'); ?>
         </div>
-        <div class="flex col-start-3 items-center justify-center md:hidden">
-            <?= $block->getChildHtml('logo'); ?>
+
+        <div class="col-start-3 flex items-center justify-center md:hidden">
+            <a href="<?= $escaper->escapeUrl($block->getUrl('')) ?>" x-element-transition-trigger class="rounded-sm px-3 py-2 text-xl font-bold" aria-label="<?= __('Go to Home page') ?>">
+                <?= $block->getChildHtml('logo'); ?>
+            </a>
         </div>
-        <div class="contents md:flex-grow md:flex md:justify-end">
+        <div class="contents md:flex md:flex-grow md:justify-end">
             <div
-                class="md:flex md:items-center"
+                class="col-start-5 md:flex md:items-center"
                 :class="{'md:drop-shadow-lg': $store.main.isHeaderShadowVisible}"
             >
                 <?= $block->getChildHtml('resizable.search'); ?>
                 <?= $block->getChildHtml('resizable.minicart'); ?>
             </div>
-            <a
-                href="<?= $block->getUrl('checkout/cart') ?>"
-                x-element-transition-trigger
-                class="button col-start-5 ghost-primary icon-button icon-button--size-lg md:hidden"
-            >
-                <?= $block->getChildHtml('minicart'); ?>
-            </a>
         </div>
     </div>
     <div id="end-of-header"></div>
 </header>
 
-<!-- TODO: Should be done through logo.phtml or separate template for desktop version of logo -->
-<div class="z-30 max-md:hidden sticky top-[88px] h-[1px] mix-blend-difference pointer-events-none">
-  <div class="flex col-start-3 absolute inset-x-0 -top-16 items-center justify-center text-white">
-    <a href="/" x-element-transition-trigger class="rounded-sm py-2 px-3 text-xl font-bold pointer-events-auto">
-      Satoshi theme
-    </a>
+<div class="pointer-events-none sticky top-[88px] z-30 h-[1px] mix-blend-difference contrast-more:mix-blend-normal max-md:hidden">
+  <div class="absolute inset-x-0 -top-16 col-start-3 flex items-center justify-center text-white">
+        <a
+            href="<?= $escaper->escapeUrl($block->getUrl('')) ?>"
+            x-element-transition-trigger
+            class="pointer-events-auto rounded-sm px-3 py-2 text-xl font-bold contrast-more:flex contrast-more:h-14 contrast-more:items-center contrast-more:border contrast-more:border-secondary-700 contrast-more:bg-fg contrast-more:px-3 contrast-more:text-black"
+            tabindex="3"
+            x-a11y-trap-element="$store.transition.isPreviewActive && !$store.resizable.isVisible()"
+            aria-label="<?= __('Go to Home page') ?>"
+        >
+            <?= $block->getChildHtml('logo'); ?>
+        </a>
   </div>
 </div>
 
