--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-desktop.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-desktop.phtml
@@ -11,6 +11,26 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 $cart = $viewModels->require(Cart::class);
 $cartItemsCount = $cart->getCartItemsQty();
 ?>
-<a class="md:button--filled-white button col-start-5 ghost-primary icon-button icon-button--size-lg md:m-2">
-    <?= $block->getChildHtml('minicart-desktop-button'); ?>
-</a>
+
+<button
+    x-init="
+        if (!$store.cart.isCartInitialized) {
+            <?php // TODO: pass cart items array ?>
+            $store.cart.setCartItems([]);
+            $store.cart.isCartInitialized = true;
+        }
+    "
+    class="md:button--filled-white button ghost-primary icon-button icon-button--size-lg col-start-5 md:m-2 contrast-more:md:border contrast-more:md:border-secondary-700"
+    x-a11y-trap-element="$store.transition.isPreviewActive && !$store.resizable.isVisible()"
+    @click="!isCartVisible ? $store.cart.showCart() : $store.cart.hideCart()"
+    type="button"
+    aria-label="<?= __('View shopping cart') ?>"
+    :class="{'hidden': !$store.main.isMobile &&   $store.resizable.isVisible('cart-desktop')}"
+>
+    <div class="contents" x-show="!isCartVisible">
+        <?= $block->getChildHtml('minicart-desktop-button'); ?>
+    </div>
+    <div class="contents" x-show="isCartVisible" style="display:none;">
+        <?= $hyvaicons->renderHtml('close'); ?>
+    </div>
+</button>
