--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header.phtml
@@ -107,3 +107,4 @@ $cartItemsCount = $cart->getCartItemsQty();
 </div>
 
 <?= $block->getChildHtml('popup.menu'); ?>
+<?= $block->getChildHtml('popup.cart'); ?>
