--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-overlay.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-overlay.phtml
@@ -1,5 +1,110 @@
+<?php
+declare(strict_types=1);
+
+use Hyva\Theme\ViewModel\SvgIcons;
+
+/** @var SvgIcons $hyvaicons */
+$hyvaicons = $viewModels->require(SvgIcons::class);
+
+$is_cart_page = false;
+?>
 <template x-if="!$store.main.isMobile">
   <template x-portal="document.getElementById('cart-desktop')">
-    {% render 'cart' %}
-  </template>
+    <div
+      <?php if(!$is_cart_page): ?>
+        :inert="$store.main.isMobile ? $store.popup.currentPopup !== 'cart' : !$store.resizable.isVisible('cart-desktop')"
+      <?php endif; ?>
+      x-data="
+        {
+          get cartItems() { return $store.cart.cartItems },
+          get isCartEmpty() { return !$store.cart.cartItems.length },
+          get isRemoveContent() { return !$store.cart.cartItems.length },
+          isTotalsExpanded: false,
+          isNoteExpanded: false,
+        }
+      "
+      class="contents"
+    >
+      <div
+        class="flex flex-col gap-5 rounded-md p-5 <?= $is_cart_page ? '' : 'md:w-[--minicart-width]' ?> md:gap-0  md:px-0 md:py-0 max-md:py-0 [.popup\_\_main_&]:px-2"
+      >
+        <div class="sticky top-0 z-10 flex items-center justify-between bg-white md:h-[--initial-height] md:min-h-14 md:rounded-md max-md:pb-4 <?= $is_cart_page ? 'md:gap-4 md:flex-row-reverse md:justify-end' : 'md:px-6' ?>">
+          <h1 class="flex items-center text-lg <?= $is_cart_page ? '' : 'md:text-md' ?>">
+            <?php if (!$is_cart_page): ?>
+              <span class="button__icon mr-4 text-[1.5rem] max-md:hidden">
+                <?= $hyvaicons->renderHtml('cart-empty'); ?>
+              </span>
+            <?php endif; ?>
+            <?= __('Shopping cart') ?>
+          </h1>
+          <template x-if="!isCartEmpty">
+            <p
+              x-show="$store.main.isMobile"
+              class="text-text-100 contrast-more:text-secondary-700"
+              x-transition.opacity
+              x-text="cartItems.length > 1 ? `${cartItems.length} items` : `${cartItems.length} item`"
+            ></p>
+          </template>
+          <div
+            x-show="!$store.main.isMobile"
+            class="delay-800 mr-1 flex h-7 w-7 justify-center rounded-full bg-slate-950 p-2 align-middle font-bold leading-5 text-white transition-all duration-300"
+            :class="{'opacity-0': isCartEmpty}"
+            x-text="cartItems.length"
+          ></div>
+        </div>
+
+        <div
+          class="max-h-0 pb-0 opacity-0"
+          :class="
+            {
+              'opacity-0 max-h-0 pb-0': !isCartEmpty,
+              'opacity-1 max-h-80 pb-4 md:px-6': isCartEmpty,
+              'hidden': !isRemoveContent
+            }
+          "
+        >
+          <p class="text-text-100 contrast-more:text-secondary-700">
+            <?= __('You did not add any products to cart yet!') ?>
+          </p>
+        </div>
+        <div
+          class="transition-opacity duration-300"
+          :class="
+            {
+              'opacity-0': isCartEmpty,
+              'opacity-1': !isCartEmpty,
+              'hidden': isRemoveContent
+            }
+          "
+          @transitionend="isRemoveContent = isCartEmpty"
+        >
+          <form
+            id="CartForm"
+            action="{{ routes.cart_url }}"
+            method="post"
+            class="contents <?= $is_cart_page ? 'md:flex md:justify-between md:gap-8 md:pt-4' : '' ?>"
+          >
+            <?php // TODO: Implement cart items here ?>
+            <div class="h-[140px] <?= $is_cart_page ? 'md:hidden' : '' ?>"></div>
+
+            <?php if (!$is_cart_page): ?>
+              <template x-portal="$store.main.isMobile ? document.getElementById('popup-fixed-content-portal') : document.getElementById('cart-desktop-fixed')">
+                <div
+                  :inert="$store.main.isMobile ? $store.popup.currentPopup !== 'cart' : !$store.resizable.isVisible('cart-desktop')"
+                  class="contents"
+                  x-show="!$store.main.isMobile || $store.popup.currentPopup == 'cart'"
+                >
+                  <?php // TODO: Implement cart totals here ?>
+                </div>
+              </template>
+            <?php else: ?>
+              <?php // TODO: Implement cart totals with styles for cart page here ?>
+            <?php endif; ?>
+          </form>
+        </div>
+      </div>
+    </div>
+
+
+    </template>
 </template>
